--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "265ff794",
+   "id": "5f025ded",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "48489270",
+   "id": "c4ced613",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c2f3587b",
+   "id": "abd07dc7",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b596fce",
+   "id": "ccdc23c3",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a6f248ae",
+   "id": "4109a047",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "20460092",
+   "id": "824a3087",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d9902dfa",
+   "id": "c74acf82",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c77117e6",
+   "id": "5f4d0225",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "da94895f",
+   "id": "dce0de6f",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "232859b2",
+   "id": "4c67a1e7",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8b2249e3",
+   "id": "f3e764d1",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d809dbbf",
+   "id": "d4ba0467",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e31f207f",
+   "id": "2aca1b4a",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1cc9cd59",
+   "id": "591f31b6",
    "metadata": {},
    "outputs": [
     {
@@ -341,22 +341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "292ca158",
+   "execution_count": 77,
+   "id": "085b6a79",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2481816058.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[73], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    if word[0]= in \"aeiou\";\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: Apple\n",
+      "ppleAay\n"
      ]
     }
    ],
    "source": [
     "word= input(\"Enter a word: \")\n",
-    "if word[0]= in \"aeiou\";\n",
+    "if word[0] in \"aeiou\":\n",
+    "   print(word + \"way\") \n",
     "else: \n",
     "    print(word[1:]+word[0]+\"ay\")\n"
    ]
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac19300",
+   "id": "57f95082",
    "metadata": {},
    "outputs": [],
    "source": []
