--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "933c9a55",
+   "id": "26f68fbc",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "41858a3b",
+   "id": "a084c364",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "70100fc1",
+   "id": "3e28396a",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "0b0387d9",
+   "id": "1725742f",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "35214e13",
+   "id": "f42968e0",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "dd812760",
+   "id": "84569fcf",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "3fb14e5c",
+   "id": "5104cd3d",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a5dc7b4a",
+   "id": "fc79f493",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "42696ded",
+   "id": "19727109",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1566956a",
+   "id": "c4852fbf",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "476acc60",
+   "id": "552993c5",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4d17a3cc",
+   "id": "3ac23e89",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "ce011504",
+   "id": "c7ac0f2c",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "fec1d6c8",
+   "id": "0196ae4a",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "3c095abc",
+   "id": "c3d8a885",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "840ecc27",
+   "id": "0f6b2710",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "a2a64e23",
+   "id": "b4fc74f6",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "0f96fec3",
+   "id": "ae034b84",
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +714,15 @@
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
     "user_input = input('Enter a string: ')\n",
     "if (user_input[0] == 'a') or 'e' or 'i' or 'o' or 'u':\n",
-    "    print (user_input + 'way')"
+    "    print(user_input + 'way')\n",
+    "else:\n",
+    "    print(user_input)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d698eb0",
+   "id": "b9731e5e",
    "metadata": {},
    "outputs": [],
    "source": []
