--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "dcf84670",
+   "id": "6523a32a",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f8ca716c",
+   "id": "b2b6577f",
    "metadata": {},
    "outputs": [
     {
@@ -205,32 +205,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "9f84b5eb",
+   "execution_count": 66,
+   "id": "3bdc0658",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a word: orange\n",
-      "orangeway\n"
+      "Write a word: cook\n",
+      "Your word in Pig latim would be: ookcay\n"
      ]
     }
    ],
    "source": [
     "s = input('Write a word: ')\n",
     "if s[0] in 'aeiou':\n",
-    "    print(s + 'way')\n",
+    "    print('Your word in Pig latim would be: ' + s + 'way')\n",
     "else:\n",
-    "    s = s[1:]+s[0]+'ay'\n",
-    "    print(f'Your word in Pig latim would be: {s}')"
+    "        print('Your word in Pig latim would be: ' + s[1:] + s[0] + 'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "223e62ae",
+   "id": "617e880b",
    "metadata": {},
    "outputs": [],
    "source": []
