--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "26f68fbc",
+   "id": "e96af9dc",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a084c364",
+   "id": "6059d366",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3e28396a",
+   "id": "b59c99c7",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1725742f",
+   "id": "7f7669a2",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f42968e0",
+   "id": "7492b909",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "84569fcf",
+   "id": "7cf2464d",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5104cd3d",
+   "id": "d57b37b7",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "fc79f493",
+   "id": "d180389b",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "19727109",
+   "id": "2a6a1cd4",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c4852fbf",
+   "id": "391a7645",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "552993c5",
+   "id": "095ff3ca",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3ac23e89",
+   "id": "f018396b",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c7ac0f2c",
+   "id": "3fd72884",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "0196ae4a",
+   "id": "cfeb3d78",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c3d8a885",
+   "id": "57979d04",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "0f6b2710",
+   "id": "8b3435ab",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b4fc74f6",
+   "id": "6b87e3c2",
    "metadata": {},
    "outputs": [
     {
@@ -697,23 +697,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "ae034b84",
+   "execution_count": 140,
+   "id": "bfa4d561",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a string: apple\n",
-      "appleway\n"
+      "Enter a string: umbrella\n",
+      "umbrellaway\n"
      ]
     }
    ],
    "source": [
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
     "user_input = input('Enter a string: ')\n",
-    "if (user_input[0] == 'a') or 'e' or 'i' or 'o' or 'u':\n",
+    "#if (user_input[0] == 'a') or 'e' or 'i' or 'o' or 'u':\n",
+    "if user_input[0] in 'aeiou':\n",
     "    print(user_input + 'way')\n",
     "else:\n",
     "    print(user_input)"
@@ -722,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9731e5e",
+   "id": "de098613",
    "metadata": {},
    "outputs": [],
    "source": []
