--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e96af9dc",
+   "id": "f1b67776",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6059d366",
+   "id": "41820339",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b59c99c7",
+   "id": "49db3051",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7f7669a2",
+   "id": "2562503d",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7492b909",
+   "id": "d0a5f4ca",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "7cf2464d",
+   "id": "40a7271e",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "d57b37b7",
+   "id": "242e3163",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "d180389b",
+   "id": "b7d0cbad",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "2a6a1cd4",
+   "id": "d89f2d9b",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "391a7645",
+   "id": "02de3bd4",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "095ff3ca",
+   "id": "66d03b51",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f018396b",
+   "id": "cac969f6",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3fd72884",
+   "id": "de2133fb",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "cfeb3d78",
+   "id": "38dce1ba",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "57979d04",
+   "id": "ddfbf355",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "8b3435ab",
+   "id": "34371cc9",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "6b87e3c2",
+   "id": "0dd9b366",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "bfa4d561",
+   "id": "dfcfe970",
    "metadata": {},
    "outputs": [
     {
@@ -717,13 +717,13 @@
     "if user_input[0] in 'aeiou':\n",
     "    print(user_input + 'way')\n",
     "else:\n",
-    "    print(user_input)"
+    "    print(user_input[1:] + user_input[0] + ay)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de098613",
+   "id": "123767ca",
    "metadata": {},
    "outputs": [],
    "source": []
