--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f1b67776",
+   "id": "2cf71ad2",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "41820339",
+   "id": "c2ef42e8",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "49db3051",
+   "id": "8a179172",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "2562503d",
+   "id": "689d0e07",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "d0a5f4ca",
+   "id": "ce173a5e",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "40a7271e",
+   "id": "579a8bb7",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "242e3163",
+   "id": "0df9edf6",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b7d0cbad",
+   "id": "ff5ef8f6",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d89f2d9b",
+   "id": "eb07ee90",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "02de3bd4",
+   "id": "8fb3572f",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "66d03b51",
+   "id": "b75ba6fa",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "cac969f6",
+   "id": "ee4452ac",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "de2133fb",
+   "id": "419a34ac",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "38dce1ba",
+   "id": "e73107ef",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ddfbf355",
+   "id": "0757e1d9",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "34371cc9",
+   "id": "a565b514",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "0dd9b366",
+   "id": "5b9ed667",
    "metadata": {},
    "outputs": [
     {
@@ -697,16 +697,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "dfcfe970",
+   "execution_count": 143,
+   "id": "778e13af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a string: umbrella\n",
-      "umbrellaway\n"
+      "Enter a string: try\n",
+      "rytay\n"
      ]
     }
    ],
@@ -717,13 +717,13 @@
     "if user_input[0] in 'aeiou':\n",
     "    print(user_input + 'way')\n",
     "else:\n",
-    "    print(user_input[1:] + user_input[0] + ay)"
+    "    print(user_input[1:] + user_input[0] + 'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123767ca",
+   "id": "552b881b",
    "metadata": {},
    "outputs": [],
    "source": []
