--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "598d38a4",
+   "id": "c00f4d2f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6318af6b",
+   "id": "d28946f6",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8fd0157c",
+   "id": "fbab2b0d",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "10b0b328",
+   "id": "32f42d98",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "caac7b58",
+   "id": "0d7d4db6",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d5399a7",
+   "id": "de27083e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0a48d432",
+   "id": "297dc199",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0b560317",
+   "id": "6fc76717",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a9b62b",
+   "id": "756025b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b60eb283",
+   "id": "a514ab9c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cdef938d",
+   "id": "70d6c5d5",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5f5a5d51",
+   "id": "92c04284",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6f20fc99",
+   "id": "91cacb56",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "230bea82",
+   "id": "3c1f8e9f",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6863fdd5",
+   "id": "b825985f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "d76ef6ac",
+   "execution_count": 131,
+   "id": "0296e72f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: word\n",
-      "ordway\n"
+      "Enter a word: apple\n",
+      "appleway\n"
      ]
     }
    ],
@@ -326,15 +326,15 @@
     "firstletter = word[0]\n",
     "\n",
     "if firstletter in \"aeiou\":\n",
-    "    print(word + way)    \n",
+    "    print(word + \"way\")    \n",
     "else:\n",
-    "    print(f\"{word[-(len(word)-1):]}{firstletter}ay\")"
+    "    print(f\"{word[1:]}{firstletter}ay\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b340ba",
+   "id": "28e88976",
    "metadata": {},
    "outputs": [],
    "source": []
