--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c974446e",
+   "id": "a086c26b",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b1644059",
+   "id": "b12ad83e",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "babf8de2",
+   "id": "fc8daedc",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "78f15653",
+   "id": "97851ba2",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1b675337",
+   "id": "041dd2b7",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0815747b",
+   "id": "7dbedb3b",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4036eeca",
+   "id": "c962ea0f",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1a06b20e",
+   "id": "735c8189",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "93c9998a",
+   "id": "a439785c",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "080b6ef7",
+   "id": "183f89ce",
    "metadata": {},
    "outputs": [
     {
@@ -311,10 +311,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89904147",
+   "id": "04902a6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str."
+   ]
   }
  ],
  "metadata": {
