--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6523a32a",
+   "id": "8e42b58c",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b2b6577f",
+   "id": "537808d9",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3bdc0658",
+   "id": "9a848f5b",
    "metadata": {},
    "outputs": [
     {
@@ -229,10 +229,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "617e880b",
+   "id": "a0af1fde",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str."
+   ]
   }
  ],
  "metadata": {
