--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f91107de",
+   "id": "e7c993bf",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15eac82e",
+   "id": "75ee0328",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57894408",
+   "id": "d130e9e7",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b7d3971",
+   "id": "88036b70",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d1a2b9eb",
+   "id": "a1a158be",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "30b74048",
+   "id": "bbb01f93",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9eecb909",
+   "id": "32e9fab0",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f0018305",
+   "id": "25b207bd",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed851e1",
+   "id": "1f3dd040",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39103387",
+   "id": "35806411",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e1b4659e",
+   "id": "a566f331",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c403f2db",
+   "id": "053d4cbb",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5db11e51",
+   "id": "47eae02b",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6286baf2",
+   "id": "961d0bc8",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d0d218b",
+   "id": "7aee58d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "5f2af76f",
+   "id": "693cd4a0",
    "metadata": {},
    "outputs": [
     {
@@ -333,8 +333,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "id": "7f7c3b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Abkjb'"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"abkjb\"\n",
+    "s.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "17e216e1",
+   "id": "b4242dc1",
    "metadata": {},
    "outputs": [],
    "source": []
