--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7c993bf",
+   "id": "76728db1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75ee0328",
+   "id": "9b075804",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d130e9e7",
+   "id": "5b1a8454",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "88036b70",
+   "id": "6b6803aa",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a1a158be",
+   "id": "de98f6f9",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bbb01f93",
+   "id": "a72f501f",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "32e9fab0",
+   "id": "c3df6778",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "25b207bd",
+   "id": "fba55306",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f3dd040",
+   "id": "46cf97b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35806411",
+   "id": "844f5e76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a566f331",
+   "id": "b4de7238",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "053d4cbb",
+   "id": "58821767",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "47eae02b",
+   "id": "ac15328e",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "961d0bc8",
+   "id": "8b922037",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aee58d6",
+   "id": "49034112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "693cd4a0",
+   "id": "f25e91d0",
    "metadata": {},
    "outputs": [
     {
@@ -333,30 +333,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "7f7c3b5f",
+   "execution_count": 139,
+   "id": "cd811f35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Abkjb'"
+       "'Abkjb Dsd'"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = \"abkjb\"\n",
+    "s = \"abkjb dsd\"\n",
     "s.title()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 140,
+   "id": "4d75231d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.index>"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "921cdadd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.index(\"dsd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b4242dc1",
+   "id": "0a5a8bfe",
    "metadata": {},
    "outputs": [],
    "source": []
